[metadata]
name = rl-ireul
version = 0.0.1
description = A Library for Offline RL
author = sql-hkr
author_email = sql.hkr@gmail.com

[options]
python_requires = >=3.7, <3.10
packages = find:
install_requires =
    torch>=1.4.0
    sklearn
    seaborn
    wandb
    tqdm
    gtimer
    loguru
    fire
    d4rl @ git+https://github.com/Farama-Foundation/D4RL@master
